# Bicocca_DS_2026

./: .dockerignore  .env_example  .gitignore  Dockerfile.streamlit  README.md  docker-compose.yaml  main.py  presentation.tex  pyproject.toml  report.tex  requirements.txt  streamlit_app.py
.streamlit/: config.toml
app/: streamlit_app.py
app/data/: european_company_metrics_2025.csv  ground_truth.csv
app/graphs/: metrics_graph.py  table_graph.py  websearch_tool_graph.py
app/src/: agents.py  logger_initialization.py  parsing_utils.py  style.css  utils.py
app/testing_notebooks/: experiments.ipynb  gpt_websearch.ipynb  table_filling_experiment.ipynb  table_input_agent.ipynb  test_agent.ipynb  websearch_agent.ipynb
app/testing_notebooks/data/: check_results_final.csv  gpt_websearch_results.xlsx  ground_truth.csv  multiagentic_results.xlsx
figures/: pilot.drawio
parser/search_engines/: search_results_receiving.ipynb
parser/search_engines/data/: Number_of_employees_of_Deutsche_Glasfaser.pkl
