[project]
name = "bank-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.5.0",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "exa-py>=2.0.2",
    "google-search-results>=2.4.2",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "json-repair>=0.54.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.49",
    "langchain-google-community>=3.0.2",
    "langchain-openai>=0.3.11",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.3.21",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.8",
    "phik>=0.12.5",
    "pydantic-ai>=1.39.0",
    "ratelimit>=2.2.1",
    "seaborn>=0.13.2",
    "serpapi>=0.1.5",
    "streamlit>=1.52.2",
    "streamlit-extras>=0.7.8",
    "streamlit-on-hover-tabs>=1.0.1",
    "tavily-python>=0.7.17",
    "xlsxwriter>=3.2.9",
    "youdotcom>=1.4.1",
]
